--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,11 @@ html2text==2020.1.16
 html5lib==1.1
 ipdb==0.13.13
 lxml==4.9.3
-pip==23.1.2
 pipdeptree==2.9.4
 playwright==1.35.0
 pycodestyle==2.10.0
+pyjson5==1.6.4
 pytz==2023.3
 requests==2.31.0
-setuptools==68.0.0
 validators==0.20.0
 wheel==0.40.0
