--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 beautifulsoup4==4.12.2
+black==23.12.1
 celery==5.3.1
+chardet==5.2.0
+curl_cffi==0.6.3
 html2text==2020.1.16
 html5lib==1.1
 ipdb==0.13.13
 lxml==4.9.3
+pip==24.0
 pipdeptree==2.9.4
 playwright==1.35.0
 pycodestyle==2.10.0
 pyjson5==1.6.4
 pytz==2023.3
-requests==2.31.0
+request-curl==0.0.3
+setuptools==69.5.1
 validators==0.22.0
 wheel==0.40.0
